# fakeface-deepfake-detector

./: .gitignore  CLAUDE.md  README.md  WORKLOG.md  pyproject.toml  requirements-detector.txt
data/processed/: deepfake_examples.jsonl
data/raw/deepfake/: SOURCES.md
docs/: ARCHITECTURE.md  annotation_guideline.md  dataset_sources.md  fakeface_findings.md  kz_call_scenarios.md  shadow_graph_demo.md  student6_brief.md  youtube_search_queries.md
src/app/: streamlit_app.py
src/extraction/: regex_extractors.py  signal_extractor.py
src/graph/: build_graph.py  graph_schema.cypher
src/media/: asr_whisper.py  detector_server.py  dfdc_model.py  fakeface_detector_real.py  fakeface_detector_stub.py  npr_model.py  ocr_paddle.py
src/parsers/: parse_kz_calls.py  parse_ready_datasets.py  parse_telegram_export.py  parse_youtube.py
src/risk/: risk_engine.py
